# sso-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  example.manifest.yaml
src/: conf.rs  constant.rs  health.rs  jwks.rs  main.rs  not_found.rs  token.rs
