[package]
name = "sso-rs"
version = "0.1.0"
authors = ["Amjad Jibon <amjad.jibon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
openssl = "0.10.38"
sha-1 = "0.10.0"
base32 = "0.4.0"
data-encoding = "2.3.2"
yaml-rust = "0.4.5"
serde_yaml = "0.8"
once_cell = "1.9.0"
ulid = "0.5.0"
urlencoding = "2.1.0"
